# codedump

./: prompt.txt
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  items.py  prepost.py
backend/app/core/: config.py
backend/app/crud/: item.py  prepost.py
backend/app/db/: session.py
backend/app/models/: item.py  prepost.py  user.py
backend/app/schemas/: item.py  prepost.py  user.py
backend/app/utils/: auth.py  dependencies.py
fe/test/: angular.json  package-lock.json
fe/test/src/app/: app.module.ts  app.routes.ts
fe/test/src/app/chat-bot/: chat-bot.component.html  chat-bot.component.scss  chat-bot.component.ts
fe/test/src/app/comp2/: comp2.component.ts
fe/test/src/app/comp3/: comp3.component.ts
fe/test/src/app/comp4/: comp4.component.ts
fe/test/src/app/comp5/: comp5.component.ts
fe/test/src/app/login/: login.component.html  login.component.scss  login.component.ts
fe/test/src/app/services/: chat.service.ts
